--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_marginTop="27dp"
+    android:layout_marginBottom="27dp"
+    android:layout_marginLeft="48dp"
+    android:layout_marginRight="48dp">
 
     <Button
         android:id="@+id/button"
@@ -16,7 +20,11 @@
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:nextFocusUp="@id/flagview"
+        android:nextFocusDown="@id/spin_switch"
+        android:nextFocusRight="@id/button2"
+        android:nextFocusLeft="@id/button3"/>
 
     <Button
         android:id="@+id/button2"
@@ -27,7 +35,11 @@
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="@+id/button"
+        android:nextFocusUp="@id/flagview"
+        android:nextFocusDown="@id/spin_switch"
+        android:nextFocusRight="@id/button3"
+        android:nextFocusLeft="@id/button"/>
 
     <Button
         android:id="@+id/button3"
@@ -38,7 +50,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="@+id/button2" />
+        app:layout_constraintTop_toTopOf="@+id/button2"
+        android:nextFocusUp="@id/spin_switch"
+        android:nextFocusDown="@id/spin_switch"
+        android:nextFocusRight="@id/button"
+        android:nextFocusLeft="@id/button2"/>
 
     <ImageView
         android:id="@+id/flagview"
@@ -47,7 +63,11 @@
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/button"
-        app:srcCompat="@drawable/flag" />
+        app:srcCompat="@drawable/flag"
+        android:nextFocusUp="@id/button"
+        android:nextFocusDown="@id/spin_switch"
+        android:nextFocusRight="@id/spin_switch"
+        android:nextFocusLeft="@id/spin_switch"/>
 
     <Switch
         android:id="@+id/spin_switch"
@@ -57,7 +77,11 @@
         android:text="@string/spin_message"
         app:layout_constraintBottom_toBottomOf="@+id/flagview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/flagview" />
+        app:layout_constraintTop_toTopOf="@+id/flagview"
+        android:nextFocusUp="@id/button3"
+        android:nextFocusDown="@id/spin_switch"
+        android:nextFocusRight="@id/flagview"
+        android:nextFocusLeft="@id/flagview"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
