--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/messageText"
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Message goes here"
@@ -15,12 +15,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/timeText"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time goes here"
-        app:layout_constraintEnd_toStartOf="@+id/messageText"
-        app:layout_constraintTop_toTopOf="@+id/messageText" />
+        app:layout_constraintEnd_toStartOf="@+id/message"
+        app:layout_constraintTop_toTopOf="@+id/message" />
 
     <ImageView
         android:id="@+id/imageView2"
